# lithium

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  lithium.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-15-bug-fixes.md  2026-05-15-multi-backend-storage.md
docs/superpowers/specs/: 2026-05-15-multi-backend-storage-design.md
src/: cache_controller.rs  config.rs  download.rs  downloader.rs  error.rs  main.rs
src/backend/: file.rs  mod.rs  s3.rs
